clusters/talos-robbinsdale/apps/media/app/unmanic/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: unmanic
spec:
  selector:
    app: unmanic
  ports:
  - name: http
    port: 8888
    protocol: TCP
    targetPort: 8888
  type: ClusterIP
